--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,114 @@
-.App {
-  text-align: center;
+body{
+	background-color: #080808;
+	color: var(--Gray, #6C7080);
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1{
+	color: #5E3BEE;
+	font-weight: 700;
+}
+.app{
+	padding: 2% 12%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.text2{
+	font-weight: 700;
+
 }
 
-.App-link {
-  color: #61dafb;
+.exchangeData{
+	display: flex;
+	gap: 32px;
+}
+.exchange-container{
+	padding-top: 10%;
+	align-items: center;
+	flex-direction: column;
+	display: flex;
+	gap: 16px;
+}
+.exchange-item{
+	display: flex;
+	flex-direction: row;
+	gap: 16px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text1{
+	color: var(--Gray, #6C7080);
+	font-size: 18px;
+	font-style: normal;
+	font-weight: 500;
+	line-height: 115%; /* 20.7px */
+}
+
+input{
+	transition: all 0.3s ease-in;
+	padding: 28px;
+	border-radius: 8px;
+	border-left: 4px solid var(--Gray, #6C7080);
+	border-bottom: 0;
+	border-top: 0;
+	border-right: 0;
+	background: var(--Black, #0C0D10);
+	box-shadow: 0px 0px 12px 0px rgba(108, 112, 128, 0.04) inset;
+}
+
+select{
+	transition: all 0.2s ease-in;
+	padding: 28px;
+	border-radius: 8px;
+	border-left: 0;
+	border-bottom: 0;
+	border-top: 0;
+	border-right: 4px solid var(--Gray, #6C7080);
+	background: var(--Black, #0C0D10);
+	box-shadow: 0px 0px 12px 0px rgba(108, 112, 128, 0.04) inset;
+}
+
+select:active , input:active{
+ color:#5E3BEE;
+ border-color: #5E3BEE;
+}
+
+select:hover, input:hover {
+	color:#5E3BEE;
+	border-color: #5E3BEE;
+
+ }
+
+select {
+  scroll-behavior: smooth;
+	scrollbar-color: #5E3BEE transparent;
+}
+
+select::-webkit-scrollbar {
+	width: 10px;
+	background: transparent;
+}
+
+select::-webkit-scrollbar-thumb {
+	background: #5E3BEE;
+	border-radius: 5px;
+}
+
+@media (max-width: 768px) {
+
+	.app{
+		padding: 2%;
+	}
+
+	.exchange-container{
+		padding-top: 8%;
+	}
+
+	.exchange-item{
+		flex-direction: column;
+	}
 }
